--- a/Frontend/visitorid.html
+++ b/Frontend/visitorid.html
@@ -19,11 +19,11 @@
         <hr>
         <a href="visitorlist.html">Besucherlisten</a>
         <hr>
-        <a href="#" style="color: #6200e8;">Besucherausweis erstellen</a>
+        <a href="visitorid.html" style="color: #6200e8;">Besucherausweis erstellen</a>
         <hr>
         <a href="visitorsettings.html">Besucher Verwalten</a>
         <hr>
-        <a href="#">Einstellungen</a>
+        <a href="Settings.html">Einstellungen</a>
         <hr>
     </div>
     <div class="topBar">
