--- a/Frontend/visitorsettings.html
+++ b/Frontend/visitorsettings.html
@@ -18,11 +18,11 @@
         <hr>
         <a href="visitorlist.html">Besucherlisten</a>
         <hr>
-        <a href="#">Besucherausweis erstellen</a>
+        <a href="visitorid.html">Besucherausweis erstellen</a>
         <hr>
         <a href="visitorsettings.html" style="color: #6200e8;">Besucher Verwalten</a>
         <hr>
-        <a href="#">Einstellungen</a>
+        <a href="Settings.html">Einstellungen</a>
         <hr>
     </div>
     <div class="topBar">
